<resources>
    <string name="app_name">Русские пароли</string>
    <string name="help_text">Введите пароль в русской раскладке и получите \"английский аналог\"</string>
    <string name="clipboard_title">пароль</string>
    <string name="message_copied">Скопировано в буфер обмена</string>
    <string name="quality_hint">(качество)</string>
    <string name="edit_hint_text">Введите пароль</string>
    <string name="check_uppercase">Заглавные</string>
    <string name="article_to_generate_text">Сгенерируйте новый сесурный пароль при необходимости</string>
    <string name="add_numbers">Цифры</string>
    <string name="add_special_symbols">Специальные символы</string>
    <string name="to_generate_password">Сгенерировать пароль</string>
    <string name="hint_for_length_of_password">8 символов</string>


    <string-array name="qualities">
        <item>@string/quality_hint</item>
        <item>Ужасный</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>Отличный</item>
    </string-array>

    <string-array name="russian">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
    </string-array>

    <string-array name="english">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
    </string-array>


    <plurals name="symbols">
        <item quantity="one">%1$d cимвол</item>
        <item quantity="two">%1$d символа</item>
        <item quantity="few">%1$d символа</item>
        <item quantity="many">%1$d символов</item>
        <item quantity="other">%1$d символов</item>
    </plurals>

</resources>
