<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:textAppearance="@android:style/TextAppearance.Medium" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:background="@drawable/result_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/copy_button_padding"
                android:src="@drawable/ic_content_copy_black_24dp" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/button_copy"
                android:layout_alignBottom="@id/button_copy"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/button_copy"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/ResultTextAppearence"

                tools:text="qQwWeE" />

            <ImageView
                android:id="@+id/quality"
                android:layout_width="@dimen/indicator_width"
                android:layout_height="@dimen/indicator_height"
                android:layout_below="@id/result_text"
                android:layout_alignParentRight="true"
                android:src="@drawable/quality_indicator" />

            <TextView
                android:id="@+id/quality_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignTop="@+id/quality"
                android:layout_alignBottom="@+id/quality"
                android:layout_toLeftOf="@id/quality"
                android:gravity="center_vertical"

                android:text="@string/quality_hint" />

        </RelativeLayout>

        <EditText
            android:id="@+id/source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_text"
            tools:text="ругауца" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_for_artical_of_generation_password"
            android:text="@string/article_to_generate_text"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <CheckBox
            android:id="@+id/check_uppercase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:text="@string/check_uppercase" />

        <CheckBox
            android:id="@+id/add_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:text="@string/add_numbers" />

        <CheckBox
            android:id="@+id/add_special_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:text="@string/add_special_symbols" />

        <SeekBar
            android:id="@+id/seek_number_of_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:max="8"
            />

        <TextView
            android:id="@+id/length_of_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:text="8 символов"
            android:hint="@string/hint_for_length_of_password"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:background="@drawable/result_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_copy_for_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/copy_button_padding"
                android:src="@drawable/ic_content_copy_black_24dp" />

            <TextView
                android:id="@+id/new_password_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/button_copy_for_new_password"
                android:layout_alignBottom="@id/button_copy_for_new_password"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/button_copy_for_new_password"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/ResultTextAppearence"
                tools:text="fweufw" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_for_generation_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/to_generate_password"
            android:textColor="@color/white_for_primary_dark"
            android:background="@color/colorPrimaryDark"
             />

    </LinearLayout>
</ScrollView>